# solana-superchargers

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILLS.md  install.sh
.github/workflows/: validate.yml
solana-indexer-skill/: CLAUDE.md  README.md  TODO.md  install.sh
solana-indexer-skill/agents/: indexer-architect.md  indexer-qa.md
solana-indexer-skill/commands/: backfill-data.md  build-indexer.md
solana-indexer-skill/rules/: indexer-defaults.md
solana-indexer-skill/skill/: SKILL.md
solana-indexer-skill/skill/examples/geyser-plugin/skeleton/: Cargo.toml  README.md
solana-indexer-skill/skill/examples/geyser-plugin/skeleton/src/: lib.rs
solana-indexer-skill/skill/examples/minimal-indexer-ts/: .env.example  README.md  index.ts  package.json  schema.sql  tsconfig.json
solana-indexer-skill/skill/examples/subgraph-template/: README.md  package.json  schema.graphql  subgraph.yaml
solana-indexer-skill/skill/examples/subgraph-template/src/: mapping.ts
solana-indexer-skill/skill/references/: backfill-strategies.md  cost-optimization.md  geyser-plugins.md  indexer-architecture.md  postgres-schemas.md  production-ops.md  real-time-streaming.md  resources.md  testing-indexers.md
